# mergecrew

./: .dockerignore  .env.example  .gitignore  .npmrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPONSORS.md  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  compose-smoke.yml  deploy-services.yml  deploy-vm.yml  deploy-web.yml  e2e-loop.yml  publish-runner-agent.yml  publish-runner-images.yml
apps/api/: package.json  tsconfig.json
apps/dogfood-smoke/: package.json  tsconfig.json
apps/e2e-loop/: package.json
apps/eval-runner/: package.json
apps/orchestrator/: package.json  vitest.config.ts
apps/runner/: package.json
apps/runner-agent/: README.md  package.json
apps/runner-dns/: package.json
apps/runner-egress-proxy/: package.json
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  (+1 more)
docs/: 00-quickstart.md  04-roadmap.md  README.md  openapi.json
scripts/: bootstrap.ts  check-no-raw-sql.mjs  deploy-pull.sh  deploy.sh  dogfood-bake-report.ts  e2e-local.sh  local-reset.sh  provision-egress-network.sh  quickstart-demo-run-smoke.sh  quickstart-smoke.sh  sse-replay-test.ts  telemetry-preview.ts
sdks/python/: README.md  pyproject.toml
sdks/python/src/mergecrew/: __init__.py  client.py
sdks/python/tests/: test_client.py
(+473 files in other folders)
