[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mergecrew"
version = "0.1.0"
description = "Official Python SDK for the Mergecrew API."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Mergecrew", email = "open-source@mergecrew.dev" }]
keywords = ["mergecrew", "api", "sdk", "agentic", "ci-cd"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/mergecrew/mergecrew"
Source = "https://github.com/mergecrew/mergecrew/tree/main/sdks/python"
Issues = "https://github.com/mergecrew/mergecrew/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mergecrew"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
